test/fixtures/fail/unclosed_string_single.l4gs.g
; An unclosed single-quoted string is an error: the string must close
; on the same line as it opened.

        db 'oops
